--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,12 +1,21 @@
 {
-  "manifest_version": 3,
-  "name": "Minimal WebExtension",
-  "version": "1.0",
-  "action": {
+  "{{chrome}}.manifest_version": 3,
+  "{{firefox}}.manifest_version": 2,
+  "icons": {
+    "16": "static/icon/16.png",
+    "32": "static/icon/32.png",
+    "48": "static/icon/48.png",
+    "96": "static/icon/96.png",
+    "128": "static/icon/128.png"
+  },
+  "{{chrome}}.action": {
+    "default_popup": "popup.html"
+  },
+  "{{firefox}}.browser_action": {
     "default_popup": "popup.html"
   },
   "background": {
-    "service_worker": "background.js"
-  },
-  "permissions": []
+    "{{chrome}}.service_worker": "background.js",
+    "{{firefox}}.scripts": ["background.js"]
+  }
 }
