--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "build": "node esbuild.config.js",
-    "build:chrome": "cross-env TARGET=chrome node esbuild.config.js",
-    "build:firefox": "cross-env TARGET=firefox node esbuild.config.js",
+    "build:chrome": "cross-env TARGET=chrome APP_MODE=dev node esbuild.config.js",
+    "build:firefox": "cross-env TARGET=firefox APP_MODE=dev node esbuild.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
