--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build": "node esbuild.config.js",
     "build:chrome": "cross-env TARGET=chrome APP_MODE=dev node esbuild.config.js",
     "build:firefox": "cross-env TARGET=firefox APP_MODE=dev node esbuild.config.js",
+    "dev": "cross-env APP_MODE=dev node esbuild.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
