--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chokidar": "^3.6.0",
     "cross-env": "^7.0.3",
     "esbuild": "^0.23.1",
+    "jsdom": "^25.0.0",
     "lit": "^3.2.0",
     "typescript": "^5.5.4",
     "vitest": "^2.0.5"
