--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,8 +5,11 @@
   "description": "🚀 Export your Phind, Perplexity and MaxAI-Google search threads into markdown files!",
   "icons": {
     "16": "files/icons/icon-16.png",
+    "32": "files/icons/icon-48.png",
     "48": "files/icons/icon-48.png",
-    "128": "files/icons/icon-128.png"
+    "96": "files/icons/icon-128.png",
+    "128": "files/icons/icon-128.png",
+    "500": "files/icons/icon-500.png"
   },
   "permissions": [
     "scripting",
