--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/chrome": "^0.0.270",
+    "@types/showdown": "^2.0.6",
     "@vitest/browser": "^2.0.5",
     "adm-zip": "^0.5.15",
     "chokidar": "^3.6.0",
